Archive2/80/6a9c21eb7e97b9/output
main.cpp: In function 'int main()':
main.cpp:28:15: error: 'struct Wrap<Foo>' has no member named 'foo'
     wrap_ptr->foo();
               ^
